[package]
name = "cold-stat"
version = "0.1.1"
edition = "2021"
authors = ["TATSUNO Yasuhiro <ytatsuno.jp@gmail.com>"]
license = "MIT"
description = "A CLI tool to statically analyze cold start of AWS Lambda functions."
readme = "README.md"
homepage = "https://github.com/exoego/cold-stat"
repository = "https://github.com/exoego/cold-stat"
keywords = ["cli", "aws", "lambda"]
categories = ["command-line-utilities"]

[dependencies]
aws-config = "1.1.8"
aws-sdk-cloudwatchlogs = "1.20.0"
aws-sdk-lambda = "1.17.0"
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.81"
log = "0.4.21"
simple_logger = "4.3.3"
chrono = "0.4.35"
async-recursion = "1.1.0"
tabled = "0.15.0"
