[package]
name = "cold-stat"
version = "0.1.3"
edition = "2021"
authors = ["TATSUNO Yasuhiro <ytatsuno.jp@gmail.com>"]
license = "MIT"
description = "CLI to statically analyze cold start of AWS Lambda functions."
readme = "README.md"
homepage = "https://github.com/exoego/cold-stat"
repository = "https://github.com/exoego/cold-stat"
keywords = ["cli", "aws", "lambda"]
categories = ["command-line-utilities"]

[dependencies]
aws-config = "1.4.0"
aws-sdk-cloudwatchlogs = "1.27.0"
aws-sdk-lambda = "1.25.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.83"
log = "0.4.21"
simple_logger = "4.3.3"
chrono = "0.4.38"
async-recursion = "1.1.1"
tabled = "0.15.0"
